# ProductKeyForge

./: .clang-tidy  .gitignore  CMakeLists.txt  Config.cmake.in  README.md
.github/workflows/: ci.yml  cmake-multi-platform-release.yml  cmake-multi-platform.yml
example/: CMakeLists.txt  main.cpp
include/: KeyFormat.h  PKF.h  PKF.h~  ProductKeyGenerator.h
include/Checksum/: BaseChecksumAlgorithm.h  CRC32ChecksumAlgorithm.h  IChecksumAlgorithm.h
include/Encryption/: IEncryptionAlgorithm.h  ShiftCipher.h  VigenereCipher.h  XOREncryption.h
include/RandomGenerator/: IRandomGenerator.h  LinearCongruentialGenerator.h  MTRandomGenerator.h  XorshiftGenerator.h
src/: KeyFormat.cpp  ProductKeyGenerator.cpp
src/Checksum/: BaseChecksumAlgorithm.cpp  CRC32ChecksumAlgorithm.cpp
src/Encryption/: ShiftCipher.cpp  VigenereCipher.cpp  XOREncryption.cpp
src/RandomGenerator/: LinearCongruentialGenerator.cpp  MTRandomGenerator.cpp  XorshiftGenerator.cpp
test/: BaseChecksumAlgorithm_test.cpp  CMakeLists.txt  CRC32ChecksumAlgorithm_test.cpp  KeyFormat_test.cpp  LinearCongruentialGenerator_test.cpp  MTRandomGenerator_test.cpp  ProductKeyGenerator_test.cpp  ShiftCipher_test.cpp  VigenereCipher_test.cpp  XOREncryption_test.cpp  XorshiftGenerator_test.cpp
